# pomvox

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  THIRD-PARTY-LICENSES.md  appcast.xml  config.example.toml  pyproject.toml
.cursor/rules/: vault-location.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
Murmur/: Murmur.entitlements  project.yml
Murmur/Sources/: AppDelegate.swift  AudioDevices.swift  Components.swift  ConfigDocument.swift  HistoryReader.swift  HistoryView.swift  HistoryWriter.swift  HomeView.swift  HubModel.swift  MenuBar.swift  Models.swift  MurmurApp.swift  ReinsertController.swift  RootView.swift  SettingsSchema.swift  SettingsStore.swift  SettingsView.swift  SetupView.swift  Sidebar.swift  StorageInspector.swift  Telemetry.swift  TelemetryConsent.swift
Murmur/Tests/: CleanupBenchTests.swift  CleanupLogicTests.swift  ConfigDocumentTests.swift  EngineTimingsTests.swift  HistoryReaderTests.swift  HistoryStoreTests.swift  HistoryWriterTests.swift  HotkeyMachineTests.swift  HudBusTests.swift  HudLogicTests.swift  MurmurDictionaryTests.swift  OnboardingLogicTests.swift  PasterTests.swift  PidfileTests.swift  ReinsertModeTests.swift  SettingsSchemaTests.swift  SettingsStoreTests.swift  StorageInspectorTests.swift  TelemetryTests.swift  VadLogicTests.swift
Natter/: Natter.entitlements  project.yml
Natter/Sources/: AppDelegate.swift  ConfigDocument.swift  HistoryReader.swift  HistoryView.swift  HistoryWriter.swift  HomeView.swift  MenuBar.swift  Models.swift  NatterApp.swift  RootView.swift  SettingsSchema.swift  SettingsStore.swift  SettingsView.swift  SetupView.swift  Sidebar.swift  StorageInspector.swift  Telemetry.swift  TelemetryConsent.swift
Natter/Tests/: CleanupBenchTests.swift  CleanupLogicTests.swift  ConfigDocumentTests.swift  EngineTimingsTests.swift  HistoryReaderTests.swift  HistoryStoreTests.swift  HistoryWriterTests.swift  HotkeyMachineTests.swift  HudBusTests.swift  HudLogicTests.swift  NatterDictionaryTests.swift  OnboardingLogicTests.swift  PasterTests.swift  PidfileTests.swift  ReinsertModeTests.swift  SettingsSchemaTests.swift  SettingsStoreTests.swift  StorageInspectorTests.swift  TelemetryTests.swift  VadLogicTests.swift
Pomvox/: Pomvox.entitlements  project.yml
Pomvox/Sources/: AppDelegate.swift  Components.swift  ConfigDocument.swift  DesignSystem.swift  DictionaryInterchange.swift  DictionaryStore.swift  DictionaryView.swift  FirstRunRouting.swift  HistoryReader.swift  HistoryView.swift  HistoryWriter.swift  HomeView.swift  HubModel.swift  LowMemoryCleanup.swift  MenuBar.swift  Models.swift  PomvoxApp.swift  QuickAdd.swift  ReinsertController.swift  ReportIssue.swift  ReportIssueView.swift  RootView.swift  SettingsSchema.swift  SettingsStore.swift  SettingsView.swift  SetupView.swift  Sidebar.swift  StorageInspector.swift  Telemetry.swift  TelemetryConsent.swift  UpdateBanner.swift  Updater.swift  UpdaterErrorClassifier.swift  (+2 more)
docs/: native-swift-path.md
native/: Package.resolved  Package.swift
scripts/: dev-signing-cert.sh  hud_demo.py  make-app-icon.py  make-appcast.sh  make_appcast.py  native_baseline.py  notarize-release.sh  preflight.py  publish-release.sh  sparkle-tools.sh  verify-hud.sh  verify-update.sh
tests/: test_audio_device.py  test_audio_level.py  test_bench.py  test_chunker.py  test_cleanup.py  test_config.py  test_dictionary.py  test_history.py  test_hotkey_machine.py  test_hud.py  test_make_appcast.py  test_onboarding.py  test_pidfile.py  test_preview.py  test_uibus.py  test_vad.py  test_watcher.py
(+175 files in other folders)
