[project]
name = "murmur"
version = "0.1.0"
description = "Fully local, privacy-first voice dictation for macOS on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "parakeet-mlx>=0.5; sys_platform == 'darwin'",
    "mlx-lm; sys_platform == 'darwin'",
    "sounddevice; sys_platform == 'darwin'",
    "webrtcvad; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "pyobjc-framework-AVFoundation; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices; sys_platform == 'darwin'",
    "rumps; sys_platform == 'darwin'",
]

[project.scripts]
murmur = "murmur.__main__:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/murmur"]

[tool.uv]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]
