[project]
name = "pomvox"
version = "0.1.0"
description = "Fully local, privacy-first voice dictation for macOS on Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # numpy backs the pure-logic vad / audio-level math, imported by vad.py and
    # stt.py. It's cross-platform (unlike the macOS stack below) so the Linux
    # spec suite resolves it too — otherwise it's only present transitively on
    # macOS and `pytest` fails to collect test_vad / test_audio_level elsewhere.
    "numpy",
    "parakeet-mlx>=0.5; sys_platform == 'darwin'",
    "mlx-lm; sys_platform == 'darwin'",
    "sounddevice; sys_platform == 'darwin'",
    # webrtcvad-wheels, not webrtcvad: upstream is unmaintained with no
    # arm64 wheels, so it compiles from source on every contributor machine.
    "webrtcvad-wheels>=2.0.14; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "pyobjc-framework-AVFoundation; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices; sys_platform == 'darwin'",
    "rumps; sys_platform == 'darwin'",
]

[project.scripts]
pomvox = "pomvox.__main__:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pomvox"]

[tool.uv]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]
